# PFC_VPRTW

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mini_instance.txt  utils.h
ALNS/: CMakeLists.txt  alns.cpp  alns.h  alns_dqn.cpp  alns_dqn.h  alns_qlearning.cpp  alns_qlearning.h  main.cpp  operators.h  vrptw.cpp  vrptw.h
ALNS Classic/: CMakeLists.txt  alns.cpp  alns.h  main.cpp  operators.cpp  operators.h  vrptw.cpp  vrptw.h
DQN_Pipeline/: alns_dqn_expert.pt  dqn_model.py  export_mock_model.py  generate_dataset.bat  generate_dataset.py  train_offline.py
DQN_Pipeline/experiences/: experiences_c101_run7.csv
Experiments/: CLASSIC_Evaluation_vs_SINTEF.csv  CLASSIC_Execution_Results.csv  DQN_Evaluation_vs_SINTEF.csv  DQN_Execution_Results.csv  GLOBAL_Comparison_Summary.csv  QLEARNING_Evaluation_vs_SINTEF.csv  QLEARNING_Execution_Results.csv  Tabla_Promedios_56_Instancias.csv  Tabla_Promedios_56_Instancias.tex  Tabla_Resultados_ALNS_ALNSQ.csv  analisis_experimentos.ipynb  automate.py  df_master_cache.csv  evaluate_models.py  generate_boxplots.py  sintef.csv  verify.py
Experiments/tables/: Tabla_Exito_f1_Familias.tex  Tabla_Promedios_56_Instancias.tex
Mapper/: route_mapper.py
Notebooks/: solver_performance_visualizer.ipynb  solver_performance_visualizer_qlearning.ipynb
Operators/: destroy_ops.cpp  operators.h  repair_ops.cpp
Results/: alns_dqn_metrics.csv  alns_metrics.csv  alns_qlearning_metrics.csv  tiempos_ejecucion_limpios.csv
Utils/: utils.cpp  utils.h
VRPTW Environment/: instance.cpp  instance.h  solution.cpp  solution.h
(+1677 files in other folders)
